Added HomePage and application routing.

--- a/src/client/FantomasTools/FantomasTools.fsproj
+++ b/src/client/FantomasTools/FantomasTools.fsproj
@@ -26,6 +26,7 @@
     <Folder Include="ASTViewer" />
     
     <Compile Include="Model.fs" />
+    <Compile Include="Navigation.fs" />
     <Compile Include="State.fs" />
     <Compile Include="View.fs" />
     <Compile Include="App.fs" />
