--- a/src/client/FantomasTools/FantomasTools.fsproj
+++ b/src/client/FantomasTools/FantomasTools.fsproj
@@ -9,6 +9,7 @@
     <None Include="paket.references" />
     <Compile Include="../../shared/TriviaShared.fs" />
     <Compile Include="../../shared/FSharpTokensShared.fs" />
+    <Compile Include="../../shared/ASTViewerShared.fs" />
     <Compile Include="Editor.fs" />
     <Compile Include="VersionBar.fs" />
     <Compile Include="Loader.fs" />
@@ -32,7 +33,14 @@
     
     <Folder Include="FantomasOnline" />
 
-    <Folder Include="ASTViewer" />
+    <Compile Include="ASTViewer\Model.fs" />
+    <Compile Include="ASTViewer\Encoders.fs" />
+    <Compile Include="ASTViewer\Decoders.fs" />
+    <Compile Include="ASTViewer\State.fs" />
+    <Compile Include="ASTViewer\GraphView.fs" />
+    <Compile Include="ASTViewer\ReactJsonView.fs" />
+    <Compile Include="ASTViewer\vis.fs" />
+    <Compile Include="ASTViewer\View.fs" />
     
     <Compile Include="Model.fs" />
     <Compile Include="Navigation.fs" />
