--- a/src/client/package.json
+++ b/src/client/package.json
@@ -34,7 +34,8 @@
     "reactstrap": "8.4.0",
     "@monaco-editor/react": "3.1.2",
     "monaco-editor": "0.20.0",
-    "lz-string": "1.4.4"
+    "lz-string": "1.4.4",
+    "react-json-view": "https://github.com/Krzysztof-Cieslak/react-json-view#built"
   },
   "scripts": {
     "start": "webpack-dev-server",
