--- a/src/server/FantomasOnlinePrevious/FantomasOnlinePrevious.fsproj
+++ b/src/server/FantomasOnlinePrevious/FantomasOnlinePrevious.fsproj
@@ -15,12 +15,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="../../shared/FantomasOnlineShared.fs" />
     <None Include="paket.references" />
+    <Compile Include="../../shared/FantomasOnlineShared.fs" />
+    <Compile Include="../FantomasOnline.Shared/Encoders.fs" />
+    <Compile Include="../FantomasOnline.Shared/Decoders.fs" />
+    <Compile Include="../FantomasOnline.Shared/Http.fs" />
     <Compile Include="FormatCode.fs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\FantomasOnline.Shared\FantomasOnline.Shared.fsproj" />
   </ItemGroup>
   <Import Project="..\..\..\.paket\Paket.Restore.targets" />
 </Project>
