--- a/infrastructure/infrastructure.fsproj
+++ b/infrastructure/infrastructure.fsproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="paket.references" />
+    <Compile Include="PulumiFSharp.fs" />
     <Compile Include="Program.fs" />
+    <Content Include="Pulumi.main.yaml" />
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
