--- a/src/client/package.json
+++ b/src/client/package.json
@@ -40,6 +40,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack -p",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d ./output"
   },
   "prettier": {
