--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ name: CI
 on:
   push:
     branches: [ master ]
+  repository_dispatch:
+    types: fantomas-commit-on-master
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
