--- a/src/client/FantomasTools/FantomasTools.fsproj
+++ b/src/client/FantomasTools/FantomasTools.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="VersionBar.fs" />
     <Compile Include="Loader.fs" />
     <Compile Include="UrlTools.fs" />
+    <Compile Include="SettingControls.fs" />
 
     <Compile Include="Trivia\Model.fs" />
     <Compile Include="Trivia\Encoders.fs" />
@@ -52,7 +53,6 @@
     <Compile Include="State.fs" />
     <Compile Include="View.fs" />
     <Compile Include="App.fs" />
-    
     
   </ItemGroup>
   <Import Project="..\..\..\.paket\Paket.Restore.targets" />
