--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         publish_dir: ./src/client/output
 
     - name: Deploy Functions
-      uses: docker://pulumi/actions
+      uses: docker://pulumi/actions:v1.14.1
       with:
         args: up
       env:
