--- a/src/client/package.json
+++ b/src/client/package.json
@@ -35,7 +35,8 @@
     "@monaco-editor/react": "3.1.2",
     "monaco-editor": "0.20.0",
     "lz-string": "1.4.4",
-    "react-json-view": "https://github.com/Krzysztof-Cieslak/react-json-view#built"
+    "react-json-view": "https://github.com/Krzysztof-Cieslak/react-json-view#built",
+    "notyf": "3.6.0"
   },
   "scripts": {
     "start": "webpack-dev-server",
