--- a/src/server/FantomasOnlinePrevious/FantomasOnlinePrevious.fsproj
+++ b/src/server/FantomasOnlinePrevious/FantomasOnlinePrevious.fsproj
@@ -6,9 +6,9 @@
     <RootNamespace>FantomasOnlinePrevious.Server</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <None Update="host.json">
+    <Content Include="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
     <None Update="local.settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
