--- a/src/client/package.json
+++ b/src/client/package.json
@@ -11,10 +11,10 @@
     "babel-loader": "8.1.0",
     "copy-webpack-plugin": "6.0.1",
     "css-loader": "3.5.3",
-    "fable-compiler": "^2.4.22",
-    "fable-loader": "^2.1.9",
+    "fable-compiler": "2.10.1",
+    "fable-loader": "2.1.9",
     "file-loader": "6.0.0",
-    "gh-pages": "2.2.0",
+    "gh-pages": "3.1.0",
     "html-webpack-plugin": "4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "4.14.1",
