Update with Fantomas.Extras.

--- a/src/server/FantomasOnlinePreview/FantomasOnlinePreview.fsproj
+++ b/src/server/FantomasOnlinePreview/FantomasOnlinePreview.fsproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\.deps\fantomas\src\Fantomas\Fantomas.fsproj" />
+    <ProjectReference Include="..\..\..\.deps\fantomas\src\Fantomas.Extras\Fantomas.Extras.fsproj" />
   </ItemGroup>
   <Import Project="..\..\..\.paket\Paket.Restore.targets" />
 </Project>
