--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,4 @@
 fsharp_max_if_then_else_short_width=25
 fsharp_max_value_binding_width=50
 fsharp_max_function_binding_width=50
+fsharp_align_function_signature_to_indentation=true
