--- a/src/client/FantomasTools/FantomasTools.fsproj
+++ b/src/client/FantomasTools/FantomasTools.fsproj
@@ -24,6 +24,7 @@
     <Compile Include="Trivia\State.fs" />
     <Compile Include="Trivia\Menu.fs" />
     <Compile Include="Trivia\ByTrivia.fs" />
+    <Compile Include="Trivia\ByTriviaNodeCandidates.fs" />
     <Compile Include="Trivia\ByTriviaNodes.fs" />
     <Compile Include="Trivia\View.fs" />
 
