Update with latest Fantomas changes.

--- a/src/server/ASTViewer/ASTViewer.fsproj
+++ b/src/server/ASTViewer/ASTViewer.fsproj
@@ -16,6 +16,7 @@
     </ItemGroup>
     <ItemGroup>
         <None Include="paket.references" />
+        <Compile Include="../../../.deps/fantomas/src/Fantomas/TriviaTypes.fs" />
         <Compile Include="../../../.deps/fantomas/src/Fantomas/AstTransformer.fs" />
         <Compile Include="TastTransformer.fs" />
         <Compile Include="..\..\shared\ASTViewerShared.fs" />
