--- a/src/server/TriviaViewer/TriviaViewer.fsproj
+++ b/src/server/TriviaViewer/TriviaViewer.fsproj
@@ -17,6 +17,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="../../../.deps/fantomas/src/Fantomas/RangeHelpers.fs" />
+    <Compile Include="../../../.deps/fantomas/src/Fantomas/TriviaTypes.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/AstTransformer.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/SourceOrigin.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/Version.fs" />
