--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,51 +1,30 @@
 {
-  "name": "client",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "7.12.3",
-    "@babel/plugin-proposal-class-properties": "7.12.1",
-    "@babel/preset-react": "7.12.5",
-    "@babel/preset-env": "7.12.1",
-    "babel-loader": "8.1.0",
-    "copy-webpack-plugin": "6.3.0",
-    "css-loader": "5.0.1",
-    "fable-compiler": "2.13.0",
-    "fable-loader": "2.1.9",
-    "file-loader": "6.2.0",
-    "gh-pages": "3.1.0",
-    "html-webpack-plugin": "4.5.0",
-    "mini-css-extract-plugin": "^1.2.1",
-    "node-sass": "5.0.0",
-    "prettier": "2.1.2",
-    "prop-types": "15.7.2",
-    "sass-loader": "10.0.5",
-    "style-loader": "2.0.0",
-    "terser-webpack-plugin": "5.0.3",
-    "webpack": "5.4.0",
-    "webpack-cli": "4.2.0",
-    "webpack-dev-server": "3.11.0"
+  "scripts": {
+    "start": "snowpack dev --secure",
+    "build": "snowpack build",
+    "test": "web-test-runner \"src/**/*.test.jsx\"",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
-    "@monaco-editor/react": "3.6.3",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-json-view": "https://github.com/Krzysztof-Cieslak/react-json-view#built",
+    "reactstrap": "8.7.1",
     "bootstrap": "4.5.3",
     "lz-string": "1.4.4",
-    "monaco-editor": "0.20.0",
-    "notyf": "3.9.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "react-json-view": "https://github.com/Krzysztof-Cieslak/react-json-view#built",
-    "reactstrap": "8.7.1"
+    "notyf": "3.9.0"
   },
-  "scripts": {
-    "start": "webpack serve --env development",
-    "build": "webpack",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d ./output"
-  },
-  "prettier": {
-    "trailingComma": "none",
-    "endOfLine": "auto"
+  "devDependencies": {
+    "@snowpack/plugin-dotenv": "^2.0.4",
+    "@snowpack/plugin-react-refresh": "^2.3.6",
+    "@snowpack/web-test-runner-plugin": "^0.1.4",
+    "@snowpack/plugin-sass": "1.1.1",
+    "@testing-library/react": "^11.0.0",
+    "@web/test-runner": "^0.9.7",
+    "chai": "^4.2.0",
+    "prettier": "^2.0.5",
+    "snowpack": "^2.17.0",
+    "gh-pages": "3.1.0"
   }
 }
