--- a/src/client/package.json
+++ b/src/client/package.json
@@ -7,14 +7,14 @@
     "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-json-view": "https://github.com/Krzysztof-Cieslak/react-json-view#built",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "reactstrap": "8.7.1",
     "bootstrap": "4.5.3",
     "lz-string": "1.4.4",
     "notyf": "3.9.0",
-    "@monaco-editor/react": "3.7.0"
+    "@monaco-editor/react": "3.7.0",
+    "monaco-editor": "0.21.2"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.0.4",
@@ -25,7 +25,7 @@
     "@web/test-runner": "^0.9.7",
     "chai": "^4.2.0",
     "prettier": "^2.0.5",
-    "snowpack": "^2.17.0",
+    "snowpack": "2.17.1",
     "gh-pages": "3.1.0"
   }
 }
