--- a/src/client/package.json
+++ b/src/client/package.json
@@ -5,8 +5,7 @@
     "postbuild": "node postbuild.mjs",
     "test": "web-test-runner \"src/**/*.test.jsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx}\"",
-    "deploy": "gh-pages -d ./build --dotfiles"
+    "lint": "prettier --check \"src/**/*.{js,jsx}\""    
   },
   "dependencies": {
     "react": "17.0.1",
@@ -27,7 +26,6 @@
     "@web/test-runner": "^0.9.7",
     "chai": "^4.2.0",
     "prettier": "^2.0.5",
-    "snowpack": "2.17.1",
-    "gh-pages": "3.1.0"
+    "snowpack": "2.17.1"
   }
 }
