--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,2 +1,25 @@
 image:
   file: .gitpod.Dockerfile
+vscode:
+  extensions:
+    - ms-dotnettools.csharp@1.21.17:5/iI88WHX4j3iL5jASDTYQ==
+    - Ionide.Ionide-fsharp@4.8.1:Und1hQIrCL6QCVpIlT9ZRw==
+tasks:
+  - init: dotnet tool restore && dotnet fake run build.fsx -t Install -p 2
+ports:
+  - port: 9060
+    onOpen: open-browser 
+  - port: 7899
+    onOpen: ignore
+  - port: 7412
+    onOpen: ignore
+  - port: 9856
+    onOpen: ignore
+  - port: 11084
+    onOpen: ignore
+  - port: 2568
+    onOpen: ignore
+  - port: 9007
+    onOpen: ignore
+  - port: 10707
+    onOpen: ignore
