--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,4 @@
-image:
-  file: .gitpod.Dockerfile
+image: nojaf/fable-azure-functions:1.0
 vscode:
   extensions:
     - ms-dotnettools.csharp@1.21.17:5/iI88WHX4j3iL5jASDTYQ==
