--- a/src/client/package.json
+++ b/src/client/package.json
@@ -18,14 +18,15 @@
     "monaco-editor": "0.21.2"
   },
   "devDependencies": {
-    "@snowpack/plugin-react-refresh": "^2.4.0",
-    "@snowpack/plugin-dotenv": "^2.0.5",
-    "@snowpack/web-test-runner-plugin": "^0.1.4",
+    "@snowpack/plugin-react-refresh": "2.4.0",
+    "@snowpack/plugin-dotenv": "2.0.5",
+    "@snowpack/web-test-runner-plugin": "0.2.1",
     "@snowpack/plugin-sass": "1.3.0",
-    "@testing-library/react": "^11.2.3",
+    "@snowpack/plugin-run-script": "2.3.0",
+    "@testing-library/react": "11.2.3",
     "@web/test-runner": "^0.9.13",
     "chai": "^4.2.0",
-    "prettier": "^2.2.1",
-    "snowpack": "2.18.5"
+    "prettier": "2.2.1",
+    "snowpack": "3.0.11"
   }
 }
