--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,9 @@
 image: nojaf/fable-azure-functions:1.0
 vscode:
   extensions:
-    - muhammad-sammy.csharp@1.23.9:BMArOoGwWqKRrH6s4E2/AQ==
-    - ionide.ionide-fsharp@5.3.2:ktwOdXq2H8VHS6SX8scVIw==
+    - muhammad-sammy.csharp
+    - ionide.ionide-fsharp
+    - syler.sass-indented
 tasks:
   - init: dotnet tool restore && dotnet fake run build.fsx -t Install -p 2
 ports:
