--- a/src/server/TriviaViewer/TriviaViewer.fsproj
+++ b/src/server/TriviaViewer/TriviaViewer.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="../../../.deps/fantomas/src/Fantomas/TriviaTypes.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/Dbg.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/Utils.fs" />
+    <Compile Include="../../../.deps/fantomas/src/Fantomas/AstExtensions.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/AstTransformer.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/SourceOrigin.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/Version.fs" />
