--- a/src/client/package.json
+++ b/src/client/package.json
@@ -18,14 +18,14 @@
     "monaco-editor": "0.21.3"
   },
   "devDependencies": {
-    "@snowpack/plugin-react-refresh": "2.4.1",
-    "@snowpack/plugin-dotenv": "2.0.5",
+    "@snowpack/plugin-react-refresh": "2.4.2",
+    "@snowpack/plugin-dotenv": "2.1.0",
     "@snowpack/web-test-runner-plugin": "0.2.2",
     "@snowpack/plugin-sass": "1.4.0",
     "@snowpack/plugin-run-script": "2.3.0",
     "@testing-library/react": "11.2.6",
-    "@web/test-runner": "^0.12.17",
-    "chai": "^4.3.4",
+    "@web/test-runner": "0.12.18",
+    "chai": "4.3.4",
     "prettier": "2.2.1",
     "snowpack": "3.2.2"
   }
