--- a/src/client/fsharp/FantomasTools.fsproj
+++ b/src/client/fsharp/FantomasTools.fsproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="paket.references" />
-    <Compile Include="../../../shared/TriviaShared.fs" />
-    <Compile Include="../../../shared/FSharpTokensShared.fs" />
-    <Compile Include="../../../shared/ASTViewerShared.fs" />
-    <Compile Include="../../../shared/FantomasOnlineShared.fs" />
+    <Compile Include="../../shared/TriviaShared.fs" />
+    <Compile Include="../../shared/FSharpTokensShared.fs" />
+    <Compile Include="../../shared/ASTViewerShared.fs" />
+    <Compile Include="../../shared/FantomasOnlineShared.fs" />
     <Compile Include="Editor.fs" />
     <Compile Include="VersionBar.fs" />
     <Compile Include="Loader.fs" />
@@ -56,5 +56,5 @@
     <Compile Include="App.fs" />
     
   </ItemGroup>
-  <Import Project="..\..\..\..\.paket\Paket.Restore.targets" />
+  <Import Project="..\..\..\.paket\Paket.Restore.targets" />
 </Project>
