--- a/src/client/package.json
+++ b/src/client/package.json
@@ -3,7 +3,7 @@
     "start": "snowpack dev",
     "prebuild": "dotnet fable ./fsharp/FantomasTools.fsproj --outDir ./src/bin",
     "build": "snowpack build",
-    "postbuild": "node postbuild.mjs",
+    "postbuild": "touch ./build/.nojekyll",
     "test": "web-test-runner \"src/**/*.test.jsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx}\""    
