--- a/src/server/FantomasOnlineV3/FantomasOnlineV3.fsproj
+++ b/src/server/FantomasOnlineV3/FantomasOnlineV3.fsproj
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Exe</OutputType>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <Content Include="host.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Update="local.settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-    </None>
-  </ItemGroup>
   <ItemGroup>
     <None Include="paket.references" />
     <Compile Include="../../shared/FantomasOnlineShared.fs" />
@@ -20,6 +12,8 @@
     <Compile Include="../FantomasOnline.Shared/Decoders.fs" />
     <Compile Include="../FantomasOnline.Shared/Http.fs" />
     <Compile Include="FormatCode.fs" />
+    <Compile Include="Program.fs" />
+    <None Include="host.json" CopyToOutputDirectory="Always" />
   </ItemGroup>
   <Import Project="..\..\..\.paket\Paket.Restore.targets" />
 </Project>
