--- a/src/server/ASTViewer/ASTViewer.fsproj
+++ b/src/server/ASTViewer/ASTViewer.fsproj
@@ -1,19 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
+        <OutputType>Exe</OutputType>
         <AzureFunctionsVersion>v3</AzureFunctionsVersion>
         <AssemblyName>ASTViewer.Server</AssemblyName>
         <RootNamespace>ASTViewer.Server</RootNamespace>
     </PropertyGroup>
-    <ItemGroup>
-        <Content Include="host.json">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-        <None Update="local.settings.json">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-        </None>
-    </ItemGroup>
     <ItemGroup>
         <None Include="paket.references" />
         <Compile Include="../../../.deps/fantomas/src/Fantomas/TriviaTypes.fs" />
@@ -23,6 +15,8 @@
         <Compile Include="Encoders.fs" />
         <Compile Include="Decoders.fs" />
         <Compile Include="GetAST.fs" />
+        <Compile Include="Program.fs" />
+        <None Include="host.json" CopyToOutputDirectory="Always" />
     </ItemGroup>
     <Import Project="..\..\..\.paket\Paket.Restore.targets" />
 </Project>
