--- a/src/server/TriviaViewer/TriviaViewer.fsproj
+++ b/src/server/TriviaViewer/TriviaViewer.fsproj
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Exe</OutputType>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
     <AssemblyName>TriviaViewer.Server</AssemblyName>
     <RootNamespace>TriviaViewer.Server</RootNamespace>
@@ -10,12 +11,9 @@
     <Content Include="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Update="local.settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="paket.references" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/RangeHelpers.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/TriviaTypes.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/Dbg.fs" />
@@ -34,7 +32,7 @@
     <Compile Include="Decoders.fs" />
     <Compile Include="Encoders.fs" />
     <Compile Include="GetTrivia.fs" />
-    <None Include="paket.references" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="..\..\..\.paket\Paket.Restore.targets" />
 </Project>
