Install Azure Core tools

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,10 @@ jobs:
       with:
         dotnet-version: 5.0.202
 
+    - name: Azure Core tools
+      uses: actions/setup-node@v2
+      run: npm i -g azure-functions-core-tools@3 --unsafe-perm true
+
     - name: Restore local tools
       run: dotnet tool restore
 
