--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
     - uses: addnab/docker-run-action@v3
       with:
         image: nojaf/fable-azure-functions:1.1
-        options: -v ${{ github.workspace }}:/workspace --w /workspace
+        options: -v ${{ github.workspace }}:/workspace -w /workspace
         run: |
           dotnet tool restore
           dotnet fake run build.fsx -t CI
