--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
-    "start": "snowpack dev",
+    "start": "vite ",
     "prebuild": "dotnet fable ./fsharp/FantomasTools.fsproj --outDir ./src/bin",
-    "build": "snowpack build",
+    "build": "vite build",
     "postbuild": "touch ./build/.nojekyll",
-    "test": "web-test-runner \"src/**/*.test.jsx\"",
+    "serve": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx}\""    
   },
@@ -19,15 +19,9 @@
     "monaco-editor": "0.21.3"
   },
   "devDependencies": {
-    "@snowpack/plugin-react-refresh": "2.5.0",
-    "@snowpack/plugin-dotenv": "2.1.0",
-    "@snowpack/web-test-runner-plugin": "0.2.2",
-    "@snowpack/plugin-sass": "1.4.0",
-    "@snowpack/plugin-run-script": "2.3.0",
-    "@testing-library/react": "12.0.0",
-    "@web/test-runner": "0.13.13",
-    "chai": "4.3.4",
-    "prettier": "2.3.2",
-    "snowpack": "3.8.2"
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "vite": "^2.4.2",
+    "sass": "1.35.2",
+    "prettier": "2.3.2"
   }
 }
