--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,15 +46,14 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./src/client/build
 
-    - name: Deploy Functions
-      uses: docker://pulumi/actions:v2.11.2
+    - uses: pulumi/actions@v3
       with:
-        args: up --yes
+        command: up
+        stack-name: main
+        work-dir: infrastructure
       env:
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-        PULUMI_ROOT: infrastructure
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-        PULUMI_CI: up
