--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,9 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./src/client/build
 
+    - name: remove obj
+      run: rm ./infrastructure/obj -rf
+
     - uses: pulumi/actions@v3
       with:
         command: up
