Mount nuget package folder.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       run: dotnet build ./infrastructure
 
     - name: docker run
-      run: /usr/bin/docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace nojaf/fable-azure-functions:1.1 bash -c "dotnet tool restore && dotnet fake run build.fsx -t CI"
+      run: /usr/bin/docker run --rm -v ${{ github.workspace }}:/workspace -v "/root/.nuget/packages:/root/.nuget/packages" -w /workspace nojaf/fable-azure-functions:1.1 bash -c "dotnet tool restore && dotnet fake run build.fsx -t CI"
 
     # Run the FAKE script inside our own Docker image, this is necessary for the Azure Functions to be published correctly.
     # Honestly, don't ask
