--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       run: dotnet tool restore
 
     - name: Restore all
-      run: dotnet restore
+      run: dotnet fake run build.fsx -t NETInstall
 
     - name: docker run
       run: /usr/bin/docker run --rm -v ${{ github.workspace }}:/workspace -v "/root/.nuget/packages:/root/.nuget/packages" -w /workspace nojaf/fable-azure-functions:1.1 bash -c "dotnet tool restore && dotnet fake run build.fsx -t CI"
