--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,3 +60,4 @@ jobs:
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+        ARM_SKIP_PROVIDER_REGISTRATION: 1
