--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "vite ",
+    "start": "dotnet fable watch ./fsharp/FantomasTools.fsproj --outDir ./src/bin --run vite",
     "prebuild": "dotnet fable ./fsharp/FantomasTools.fsproj --outDir ./src/bin",
     "build": "vite build --base=/fantomas-tools/",
     "postbuild": "touch ./build/.nojekyll",
