--- a/infrastructure/Pulumi.yaml
+++ b/infrastructure/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: fantomas-tools
+name: fantomas-aws
 runtime: dotnet
-description: Fantomas tools Azure resource
+description: A minimal AWS F# Pulumi program
