--- a/src/server/FantomasOnlineV4/FantomasOnlineV4.fsproj
+++ b/src/server/FantomasOnlineV4/FantomasOnlineV4.fsproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <OutputType>Exe</OutputType>
-    <AzureFunctionsVersion>v3</AzureFunctionsVersion>
-    <AssemblyName>FantomasOnlineV4</AssemblyName>
-    <RootNamespace>FantomasOnlineV4</RootNamespace>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+    <AWSProjectType>Lambda</AWSProjectType>
+    <OutputType>exe</OutputType>
+    <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
     <None Include="paket.references" />
@@ -15,7 +16,6 @@
     <Compile Include="../FantomasOnline.Shared/Http.fs" />
     <Compile Include="FormatCode.fs" />
     <Compile Include="Program.fs" />
-    <None Include="host.json" CopyToOutputDirectory="Always" />
   </ItemGroup>
   <Import Project="..\..\..\.paket\Paket.Restore.targets" />
 </Project>
