--- a/src/server/ASTViewer/ASTViewer.fsproj
+++ b/src/server/ASTViewer/ASTViewer.fsproj
@@ -10,10 +10,14 @@
   <ItemGroup>
     <None Include="paket.references" />
     <Compile Include="..\..\shared\ASTViewerShared.fs" />
+    <Compile Include="..\HttpConstants.fs" />
+    <Compile Include="..\AWSLambdaExtensions.fs" />
+    <Compile Include="..\SuaveExtensions.fs" />
     <Compile Include="Encoders.fs" />
     <Compile Include="Decoders.fs" />
     <Compile Include="GetAST.fs" />
     <Compile Include="Function.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="..\..\..\.paket\Paket.Restore.targets" />
 </Project>
