--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,9 @@ fsharp_max_value_binding_width=50
 fsharp_max_function_binding_width=50
 fsharp_align_function_signature_to_indentation=true
 
+[build.fsx]
+fsharp_disable_elmish_syntax=true
+
 [src/**/Encoders.fs]
 fsharp_disable_elmish_syntax=true
 
